mdapi/Custom/objects/Rehab_Vendors__c.object
<CustomObject>
    <description>This is a joiner object between the Rehab object and the company/contact object to relate all they key properties (other than locksmith and GC who are on the record) with the rehab project.</description>
    <fields>
        <fullName>Alert_Vendor_Date_Time__c</fullName>
        <inlineHelpText>This will auto-populate with the date/time that the vendor alert was triggered.</inlineHelpText>
        <label>Alert Vendor Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Alert_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will send an auto-alert to the vendor to provide an initial notification about the job included property #, address and the notes in the comment field.  This requires a primary contact with a valid email address.  You will be cc&apos;d.</inlineHelpText>
        <label>Alert Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Job Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Phone__c</fullName>
        <formula>Company__r.Phone</formula>
        <label>Company Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rehabs: Direct Vendor Projects</relationshipLabel>
        <relationshipName>Rehab_Vendors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile__c</fullName>
        <formula>Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The contact you entered doesn&apos;t match the company you entered.</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Rehab Vendors</relationshipLabel>
        <relationshipName>Rehab_Vendors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flooring_Notes__c</fullName>
        <label>Flooring Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rehab__c</fullName>
        <label>Rehab</label>
        <referenceTo>Rehab__c</referenceTo>
        <relationshipName>Rehab_Vendors</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Appliances</fullName>
                </value>
                <value>
                    <fullName>Blinds</fullName>
                </value>
                <value>
                    <fullName>Cabinets</fullName>
                </value>
                <value>
                    <fullName>Countertops</fullName>
                </value>
                <value>
                    <fullName>Final Clean</fullName>
                </value>
                <value>
                    <fullName>Fireplace Inspection</fullName>
                </value>
                <value>
                    <fullName>Flooring</fullName>
                </value>
                <value>
                    <fullName>Garage Doors</fullName>
                </value>
                <value>
                    <fullName>Gas Inspection</fullName>
                </value>
                <value>
                    <fullName>Glass</fullName>
                </value>
                <value>
                    <fullName>HVAC</fullName>
                </value>
                <value>
                    <fullName>Irrigation</fullName>
                </value>
                <value>
                    <fullName>Landscaping</fullName>
                </value>
                <value>
                    <fullName>Lawn Service</fullName>
                </value>
                <value>
                    <fullName>Pest Control</fullName>
                </value>
                <value>
                    <fullName>Pool</fullName>
                </value>
                <value>
                    <fullName>Refinish Sink/Shower/Tub</fullName>
                </value>
                <value>
                    <fullName>Rolloff Dumpsters</fullName>
                </value>
                <value>
                    <fullName>Roofing</fullName>
                </value>
                <value>
                    <fullName>Steam Clean</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sq_Ft_Laminate__c</fullName>
        <label>Sq Ft -  Laminate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sq_Ft_Tile_13_x_13__c</fullName>
        <label>Sq Ft -  Tile 13 x 13</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sq_Ft_Tile_20_x_20__c</fullName>
        <label>Sq Ft  - Tile 20 x 20</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sq_Ft_Vinyl__c</fullName>
        <label>Sq Ft  - Vinyl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sq_Ft_Wood__c</fullName>
        <label>Sq Ft  - Wood</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sq_Yd_Carpet__c</fullName>
        <label>Sq Ft - Carpet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Performance__c</fullName>
        <inlineHelpText>This field should be used to add any comments re: the vendor performance on this job.</inlineHelpText>
        <label>Vendor Performance</label>
        <type>TextArea</type>
    </fields>
    <label>Rehab Vendors</label>
    <nameField>
        <displayFormat>RehabVendor-{0000}</displayFormat>
        <label>Record Link</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rehab Vendors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contact_Email_Required_to_Alert_Vendor</fullName>
        <active>true</active>
        <description>there needs to be a value in “contact email” in order to check “Alert Vendor”  box</description>
        <errorConditionFormula>AND( Alert_Vendor__c  = true, ISBLANK( Contact_Email__c ))</errorConditionFormula>
        <errorDisplayField>Alert_Vendor__c</errorDisplayField>
        <errorMessage>There needs to be a value in Contact Email in order to Alert Vendor</errorMessage>
    </validationRules>
</CustomObject>